src/monero_api.h


    typedef struct ErrorBox
    {
        int code;
        const char *message;
    } ErrorBox;


    // **********************************************************************************************************************************
    // Wallet manager
    // **********************************************************************************************************************************

    // Creating (loading) wallet
    void create_wallet(const char *path, const char *password, const char *language, int32_t network_type, ErrorBox *error);

    void restore_wallet_from_seed(const char *path, const char *password, const char *seed, int32_t network_type, uint64_t restore_height, ErrorBox *error);

    void restore_wallet_from_keys(const char *path, const char *password, const char *language, const char *address, const char *view_key, const char *spend_key, int32_t network_type, uint64_t restore_height, ErrorBox *error);

    bool is_wallet_exist(const char *path);

    void load_wallet(const char *path, const char *password, int32_t net_type, ErrorBox *error);

    void close_current_wallet(ErrorBox *error);


    // Get info
    const char *secret_view_key(ErrorBox *error);

    const char *public_view_key(ErrorBox *error);

    const char *secret_spend_key(ErrorBox *error);

    const char *public_spend_key(ErrorBox *error);

    const char *seed(ErrorBox *error);


    const char *get_filename(ErrorBox *error);


    // Change
    void set_password(const char *password, ErrorBox *error);


    // Save
    void store(const char *path, ErrorBox *error);


    // Unknown use case!
    void set_recovering_from_seed(bool is_recovery, ErrorBox *error);


    // **********************************************************************************************************************************
    // Synchronization
    // **********************************************************************************************************************************

    void on_startup(ErrorBox *error);

    void setup_node(const char *address, const char *login, const char *password, bool use_ssl, bool is_light_wallet, ErrorBox *error);

    void set_listener(ErrorBox *error);

    void connect_to_node(ErrorBox *error);

    bool is_connected(ErrorBox *error);