lib/monero_api_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Bindings for `src/monero_api.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class MoneroApiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MoneroApiBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MoneroApiBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Creating (loading) wallet
  void create_wallet(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> password,
    ffi.Pointer<ffi.Char> language,
    int network_type,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _create_wallet(
      path,
      password,
      language,
      network_type,
      error,
    );
  }

  late final _create_walletPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int32,
              ffi.Pointer<ErrorBox>)>>('create_wallet');
  late final _create_wallet = _create_walletPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int, ffi.Pointer<ErrorBox>)>();

  void restore_wallet_from_seed(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> password,
    ffi.Pointer<ffi.Char> seed,
    int network_type,
    int restore_height,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _restore_wallet_from_seed(
      path,
      password,
      seed,
      network_type,
      restore_height,
      error,
    );
  }

  late final _restore_wallet_from_seedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int32,
              ffi.Uint64,
              ffi.Pointer<ErrorBox>)>>('restore_wallet_from_seed');
  late final _restore_wallet_from_seed =
      _restore_wallet_from_seedPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, int, int, ffi.Pointer<ErrorBox>)>();

  void restore_wallet_from_keys(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> password,
    ffi.Pointer<ffi.Char> language,
    ffi.Pointer<ffi.Char> address,
    ffi.Pointer<ffi.Char> view_key,
    ffi.Pointer<ffi.Char> spend_key,
    int network_type,
    int restore_height,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _restore_wallet_from_keys(
      path,
      password,
      language,
      address,
      view_key,
      spend_key,
      network_type,
      restore_height,
      error,
    );
  }

  late final _restore_wallet_from_keysPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int32,
              ffi.Uint64,
              ffi.Pointer<ErrorBox>)>>('restore_wallet_from_keys');
  late final _restore_wallet_from_keys =
      _restore_wallet_from_keysPtr.asFunction<
          void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              int,
              ffi.Pointer<ErrorBox>)>();

  bool is_wallet_exist(
    ffi.Pointer<ffi.Char> path,
  ) {
    return _is_wallet_exist(
      path,
    );
  }

  late final _is_wallet_existPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>)>>(
          'is_wallet_exist');
  late final _is_wallet_exist =
      _is_wallet_existPtr.asFunction<bool Function(ffi.Pointer<ffi.Char>)>();

  void load_wallet(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> password,
    int net_type,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _load_wallet(
      path,
      password,
      net_type,
      error,
    );
  }

  late final _load_walletPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int32, ffi.Pointer<ErrorBox>)>>('load_wallet');
  late final _load_wallet = _load_walletPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<ErrorBox>)>();

  void close_current_wallet(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _close_current_wallet(
      error,
    );
  }

  late final _close_current_walletPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ErrorBox>)>>(
          'close_current_wallet');
  late final _close_current_wallet = _close_current_walletPtr
      .asFunction<void Function(ffi.Pointer<ErrorBox>)>();

  /// Get info
  ffi.Pointer<ffi.Char> secret_view_key(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _secret_view_key(
      error,
    );
  }

  late final _secret_view_keyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ErrorBox>)>>('secret_view_key');
  late final _secret_view_key = _secret_view_keyPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ErrorBox>)>();

  ffi.Pointer<ffi.Char> public_view_key(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _public_view_key(
      error,
    );
  }

  late final _public_view_keyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ErrorBox>)>>('public_view_key');
  late final _public_view_key = _public_view_keyPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ErrorBox>)>();

  ffi.Pointer<ffi.Char> secret_spend_key(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _secret_spend_key(
      error,
    );
  }

  late final _secret_spend_keyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ErrorBox>)>>('secret_spend_key');
  late final _secret_spend_key = _secret_spend_keyPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ErrorBox>)>();

  ffi.Pointer<ffi.Char> public_spend_key(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _public_spend_key(
      error,
    );
  }

  late final _public_spend_keyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ErrorBox>)>>('public_spend_key');
  late final _public_spend_key = _public_spend_keyPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ErrorBox>)>();

  ffi.Pointer<ffi.Char> seed(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _seed(
      error,
    );
  }

  late final _seedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ErrorBox>)>>('seed');
  late final _seed = _seedPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ErrorBox>)>();

  ffi.Pointer<ffi.Char> get_filename(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _get_filename(
      error,
    );
  }

  late final _get_filenamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ErrorBox>)>>('get_filename');
  late final _get_filename = _get_filenamePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ErrorBox>)>();

  /// Change
  void set_password(
    ffi.Pointer<ffi.Char> password,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _set_password(
      password,
      error,
    );
  }

  late final _set_passwordPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>>('set_password');
  late final _set_password = _set_passwordPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>();

  /// Save
  void store(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _store(
      path,
      error,
    );
  }

  late final _storePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>>('store');
  late final _store = _storePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ErrorBox>)>();

  /// Unknown use case!
  void set_recovering_from_seed(
    bool is_recovery,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _set_recovering_from_seed(
      is_recovery,
      error,
    );
  }

  late final _set_recovering_from_seedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Bool, ffi.Pointer<ErrorBox>)>>('set_recovering_from_seed');
  late final _set_recovering_from_seed = _set_recovering_from_seedPtr
      .asFunction<void Function(bool, ffi.Pointer<ErrorBox>)>();

  /// **********************************************************************************************************************************
  /// Synchronization
  /// **********************************************************************************************************************************
  void on_startup(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _on_startup(
      error,
    );
  }

  late final _on_startupPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ErrorBox>)>>(
          'on_startup');
  late final _on_startup =
      _on_startupPtr.asFunction<void Function(ffi.Pointer<ErrorBox>)>();

  void setup_node(
    ffi.Pointer<ffi.Char> address,
    ffi.Pointer<ffi.Char> login,
    ffi.Pointer<ffi.Char> password,
    bool use_ssl,
    bool is_light_wallet,
    ffi.Pointer<ErrorBox> error,
  ) {
    return _setup_node(
      address,
      login,
      password,
      use_ssl,
      is_light_wallet,
      error,
    );
  }

  late final _setup_nodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Bool,
              ffi.Bool,
              ffi.Pointer<ErrorBox>)>>('setup_node');
  late final _setup_node = _setup_nodePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, bool, bool, ffi.Pointer<ErrorBox>)>();

  void set_listener(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _set_listener(
      error,
    );
  }

  late final _set_listenerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ErrorBox>)>>(
          'set_listener');
  late final _set_listener =
      _set_listenerPtr.asFunction<void Function(ffi.Pointer<ErrorBox>)>();

  void connect_to_node(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _connect_to_node(
      error,
    );
  }

  late final _connect_to_nodePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ErrorBox>)>>(
          'connect_to_node');
  late final _connect_to_node =
      _connect_to_nodePtr.asFunction<void Function(ffi.Pointer<ErrorBox>)>();

  bool is_connected(
    ffi.Pointer<ErrorBox> error,
  ) {
    return _is_connected(
      error,
    );
  }

  late final _is_connectedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ErrorBox>)>>(
          'is_connected');
  late final _is_connected =
      _is_connectedPtr.asFunction<bool Function(ffi.Pointer<ErrorBox>)>();
